# perf-lint

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: README.md
samples/gatling/: EcommerceBadSimulation.scala  EcommerceGoodSimulation.scala
samples/jmeter/: ecommerce_bad.jmx  ecommerce_good.jmx
samples/k6/: api_spike_test.js  ecommerce_bad.js  ecommerce_good.js
src/perf_lint/: __init__.py  cli.py  engine.py  fixer.py  xml_utils.py
src/perf_lint/config/: __init__.py  loader.py  schema.py
src/perf_lint/ir/: __init__.py  models.py
src/perf_lint/parsers/: __init__.py  base.py  gatling.py  jmeter.py  k6.py
src/perf_lint/plugins/: __init__.py  loader.py
src/perf_lint/reporters/: __init__.py  base.py  json_reporter.py  sarif.py  text.py
src/perf_lint/rules/: __init__.py  base.py
tests/: conftest.py
tests/fixtures/gatling/: AggressiveAtOnceSimulation.scala  AggressiveRampupSimulation.scala  AssertionNoSLOSimulation.scala  EmptySimulation.scala  FixedPauseOnlySimulation.scala  GoodSimulation.scala  HardcodedIPSimulation.scala  HttpNoHttp2Simulation.scala  HttpsNoHttp2Simulation.scala  MissingAssertionsSimulation.scala  MissingCheckSimulation.scala  MissingPauseSimulation.scala  MultiRequestNoSaveAsSimulation.scala  NoMaxDurationSimulation.scala  SafeAtOnceSimulation.scala  WithCheckSimulation.scala  WithHttp2Simulation.scala  WithMaxDurationSimulation.scala  WithSaveAsSimulation.scala  WithTimeoutSimulation.scala
tests/fixtures/jmeter/: bad_rampup.jmx  good.jmx  hardcoded_ip.jmx  missing_assertions.jmx  missing_managers.jmx
tests/integration/: test_cli.py  test_full_pipeline.py
tests/plugins/: sample_config.yml  test_plugin_loader.py
tests/unit/: test_config_loader.py  test_engine.py  test_fixer.py  test_gatling_parser.py  test_ir_models.py  test_jmeter_parser.py  test_k6_parser.py  test_parsers.py
(+15 files in other folders)
